--- a/index.html
+++ b/index.html
@@ -31,19 +31,20 @@
 
         <!--Creo un div con una clase personalizada nav para poner por un lado el logo que va a ser un texto+icono+texto y del otro lado los enlaces-->
         <!--Le pongo el row para que sea la fila que modela las dos columnas siguientes de logo y nav-->
-        <div class="nav row  justify-content-between rounded-top">
+        <div class="nav row  justify-content-between rounded-top g-0">
 
             <!--creo otro div para todo lo que es el logo osea el h2+el div con el icono, parrafos y encabezados tienen siempre un margen por defecto por eso mb-0-->
-            <div class="logo col-auto d-flex align-items-center pl-4">
+            <!--ojo no me deja agregar pl-4 en el siguiente elemento, pongo provisorio px-4 y pe-0 -->
+            <div class="logo col-auto d-flex align-items-center px-4 pe-0">
 
-                <h2 class="fw-bold text-uppercase mb-0">Makzzer</h2>
+                <h2 class="fw-bold text-uppercase mb-0">Maximiliano Sánchez </h2>
                 <div class="icono">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot"
                         viewBox="0 0 16 16">
                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                     </svg>
                 </div>
-                <p class="mb-0"> Desarrollador Web</p>
+                <p class="mb-0"> Web Dev</p>
             </div>
 
 
@@ -52,7 +53,7 @@
             <nav class="menu col-auto d-flex align-items-stretch ">
 
 
-                <a href="#" class="color1 px-4 d-flex  align-items-stretch text-center text-white text-decoration-none">
+                <a href="#" class="color1 px-4 d-flex  align-items-center text-center text-white text-decoration-none">
 
                     <!--agrego el siguiente div para que el icono y el texto "portafolio" no trabajen con flex y se pongan un abajo del otro-->
                     <div class="w-100">
@@ -69,31 +70,37 @@
                     </div>
 
 
-                   
+
                 </a>
 
-                <a href="#" class="color2 px-4 d-flex  align-items-stretch text-center text-white text-decoration-none">
+                <a href="#" class="color2 px-4 d-flex   align-items-center text-center text-white text-decoration-none">
 
-                    <span>Acerca De</span>
-                    <div class="icono">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-people-fill" viewBox="0 0 16 16">
-                            <path
-                                d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z" />
-                        </svg>
+                    <div class="w-100">
+
+                        <span>Acerca De</span>
+                        <div class="icono">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-people-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z" />
+                            </svg>
+                        </div>
                     </div>
                 </a>
 
-                <a href="#" class="color3 px-4 d-flex  align-items-stretch text-center text-white text-decoration-none">
+                <a href="#" class="color3 px-4 d-flex  align-items-center text-center text-white text-decoration-none">
 
-                    <span>Contacto</span>
-                    <div class="icono">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-envelope-fill" viewBox="0 0 16 16">
-                            <path
-                                d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z" />
-                        </svg>
+                    <div>
+                        <span>Contacto</span>
+                        <div class="icono">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z" />
+                            </svg>
+                        </div>
                     </div>
+
                 </a>
 
 
@@ -103,6 +110,74 @@
 
 
         </div>
+
+
+
+
+        <!--Slider-->
+
+        <div class="row slider">
+            <div class="col">
+
+                <div class="carousel slide" data-bs-ride="carousel" id="slider-fotos">
+                    <div class="carousel-inner">
+
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="/img/slide-1.jpg" alt="c1">
+                        </div>
+
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/img/slide-2.jpg" alt="c1">
+                        </div>
+
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/img/slide-3.jpg" alt="c1">
+                        </div>
+
+
+                        <button class="carousel-control-prev" data-bs-target="#slider-fotos" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true">
+                                <span class="visually-hidden">Anterior</span>
+
+                            </span>
+                        </button>
+
+
+
+                        <button class="carousel-control-next" data-bs-target="#slider-fotos" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true">
+                                <span class="visually-hidden">Siguiente</span>
+
+                            </span>
+                        </button>
+
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#slider-fotos" data-bs-slide-to="0" class="active"
+                                aria-current="true" aria-label="Slideshow1"></button>
+
+
+                            <button type="button" data-bs-target="#slider-fotos" data-bs-slide-to="1"
+                                aria-label="Slideshow2"></button>
+
+                            <button type="button" data-bs-target="#slider-fotos" data-bs-slide-to="2"
+                                aria-label="Slideshow3"></button>
+
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+
     </header>
 
 
